Updating various parts of the Reader and adding JavaDocs to parts that didn't have it before.